fix z-index for header

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -8,6 +8,7 @@
 	left: 0;
 	right: 0;
 	margin: 0 auto;
+	z-index: 1000;
 }
 
 .header-container {
