--- a/src/components/mainContainer.css
+++ b/src/components/mainContainer.css
@@ -21,7 +21,7 @@
 	border-radius: 20px;
 	margin-bottom: 1.5em;
 	animation: pulse 2s infinite;
-	z-index: 1;
+	z-index: 0;
 }
 
 @keyframes pulse {
